# Galileo-controlled-claw

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  compose.gpu.yml  compose.yml  down.sh  setup.sh  up.sh
ac-evaluators/defenseclaw/: pyproject.toml
ac-evaluators/defenseclaw/src/agent_control_evaluator_defenseclaw/: __init__.py  client.py  config.py  evaluator.py
ac-server/: Dockerfile
ac-setup/: Dockerfile  apply-delegation.py  setup.py
cisco/: README.md  disable.sh  enable.sh
docs/: USAGE.md
forwarders/: Dockerfile.o11y  Dockerfile.splunk  o11y-forwarder.sh  splunk-forwarder.sh
llm-proxy/: Dockerfile  proxy.mjs
openclaw/: Dockerfile  cachetrace-o11y-forwarder.mjs  cachetrace-splunk-forwarder.mjs  entrypoint.sh  galileo-forwarder.mjs  render-config.mjs
openclaw/agent-workspace/: AGENTS.md
openclaw/agent-workspace-helper/: AGENTS.md
webex/: TRIAGE.md  index.mjs  oauth-setup.mjs  openclaw.plugin.json  package-lock.json  package.json  webex-client.mjs  webex.settings.example.json
