[project]
name = "agent-control-evaluator-defenseclaw"
version = "0.1.0"
description = "DefenseClaw local inspection evaluator for agent-control (fail-closed)"
authors = [{ name = "Shahid Ajaz" }]
requires-python = ">=3.12"
dependencies = [
    "agent-control-evaluators>=7.5.0",
    "agent-control-models",
    "httpx",
    "pydantic>=2",
]

[project.entry-points."agent_control.evaluators"]
"defenseclaw" = "agent_control_evaluator_defenseclaw:DefenseClawEvaluator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_control_evaluator_defenseclaw"]
